# MatDaemon

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Core.py  Dockerfile  Grab.py  MAEMONMAT  Makefile  README.md  SECURITY.md  __init__.py  core.py  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark_report.md
.github/actions/matdaemon-benchmark/: action.yml
.github/workflows/: matdaemon-benchmark.yml  publish.yml  tests.yml
backends/: __init__.py  base.py  cuda_backend.py  cude_backend.py  numpy_backend.py
benchmarks/: benchmark_matmul.py  benchmark_suite.py
docs/: BENCHMARKING.md  CLOUD.md  GITHUB_ACTION.md  LAUNCH.md  MCP.md  METADATA.md  PLATFORM.md  PRODUCT.md  PUBLISHING.md
examples/: agent_embedding_router.py  local_rag_similarity.py
matdaemon/: __init__.py  api.py  cli.py  matdaemon.py  mcp_server.py  moe.py  physics.py  platform.py  text.py  train.py  use_cases.py
matdaemon/backends/: __init__.py  base.py  cuda_backend.py  numpy_backend.py  tiled_backend.py
scripts/: install.sh
tests/: test_ai_surfaces.py  test_api.py  test_matdaemon.py  test_moe.py  test_physics.py  test_platform.py  test_root_backends.py  test_text.py  test_train.py
