[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matdaemon"
version = "0.2.0"
description = "High-Performance Matrix Multiplication SDK with CPU and CUDA backends"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "ItsNotAILABS"}]
dependencies = ["numpy>=1.20"]
optional-dependencies = {cuda = ["cupy-cuda12x"]}   # or cupy-cuda11x / cupy
keywords = ["matrix-multiplication", "cuda", "numpy", "ai", "agentic-ai", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ItsNotAILABS/MatDaemon"
Repository = "https://github.com/ItsNotAILABS/MatDaemon"

[tool.setuptools.packages.find]
where = ["."]
