[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matdaemon"
version = "0.3.0"
description = "AI-native matrix compute SDK, daemon, CLI, API, MCP server, and GitHub-callable benchmark platform."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "ItsNotAILABS"}]
keywords = [
  "agentic-ai",
  "ai-agents",
  "artificial-intelligence",
  "cuda",
  "gemm",
  "matrix-multiplication",
  "mcp",
  "mlops",
  "model-context-protocol",
  "numpy",
  "rag",
  "vector-search",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.23"]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic>=2"]
mcp = ["mcp>=1.2"]
cuda = ["cupy-cuda12x>=12; platform_system != 'Darwin'"]
dev = ["pytest>=7.4", "fastapi>=0.115", "uvicorn[standard]>=0.30", "httpx>=0.27"]
all = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "pydantic>=2", "mcp>=1.2", "cupy-cuda12x>=12; platform_system != 'Darwin'"]

[project.scripts]
matdaemon = "matdaemon.cli:main"

[project.urls]
Homepage = "https://github.com/ItsNotAILABS/MatDaemon"
Repository = "https://github.com/ItsNotAILABS/MatDaemon"
Issues = "https://github.com/ItsNotAILABS/MatDaemon/issues"
Documentation = "https://github.com/ItsNotAILABS/MatDaemon#readme"
Benchmarks = "https://github.com/ItsNotAILABS/MatDaemon/tree/main/benchmarks"

[tool.setuptools.packages.find]
include = ["matdaemon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
